fix vertical alignment again

--- a/style/main.css
+++ b/style/main.css
@@ -376,9 +376,6 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-32768 .tile-inner {
         font-size: 15px; } }
-  .tile.tile-1 .tile-inner {
-    background: #D1D9D9;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: #DAECEC;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
